<resources>
    <string name="app_name">My Application</string>
    <string name="todo">TODO</string>
    <string name="hint">hint</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="button">Button</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_user">New user ?</string>
    <string name="signup">Signup</string>
</resources>